unpackaged/main/default/objects/BackOffice_Settings__c/BackOffice_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>BackOffice Settings</label>
</CustomObject>