unpackaged/main/default/objects/BackOffice_Settings__c/fields/PAY_FAC_BONUS_FOR_ADJ__c.field-meta.xml
<CustomField>
    <fullName>PAY_FAC_BONUS_FOR_ADJ__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PAY_FAC_BONUS_FOR_ADJ</label>
    <type>Checkbox</type>
</CustomField>