unpackaged/main/default/objects/BackOffice_Settings__c/fields/RAP_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>RAP_Batch_Size__c</fullName>
    <description>SSFI-1191</description>
    <label>RAP Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>