unpackaged/main/default/objects/BackOffice_Settings__c/fields/RAP_Days_to_Verify__c.field-meta.xml
<CustomField>
    <fullName>RAP_Days_to_Verify__c</fullName>
    <description>Number of days to send a RAP call for verification after creation timestamp.</description>
    <label>RAP Days to Verify</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>