unpackaged/main/default/objects/BackOffice_Settings__c/fields/RECIPSCFAC__c.field-meta.xml
<CustomField>
    <fullName>RECIPSCFAC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RECIPSCFAC</label>
    <type>Checkbox</type>
</CustomField>