unpackaged/main/default/objects/BackOffice_Settings__c/fields/RECIPSCFIX__c.field-meta.xml
<CustomField>
    <fullName>RECIPSCFIX__c</fullName>
    <label>RECIPSCFIX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>