unpackaged/main/default/objects/BackOffice_Settings__c/fields/RECIPSTYPE__c.field-meta.xml
<CustomField>
    <fullName>RECIPSTYPE__c</fullName>
    <label>RECIPSTYPE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>